--- a/index.html
+++ b/index.html
@@ -38,13 +38,27 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人总结.</h3>
 
-<ul>
-  <li><a href="#">网页效果类</a>
+<ul id="grzj">
+  <li><span>js网页特效</span>
     <dl>
-      <li><a href="html/clock.html">简历时钟</a></li>
+      <dd><a href="html/clock.html" target="_blank">简易时钟</a></dd>
     </dl>
   </li>
-  <li><a href="#">js/jquery插件类</a></li>
+  <li><span>jquery网页特效</span>
+    <dl>
+      <dd><a href="html/clock.html" target="_blank"></a></dd>
+    </dl>
+  </li>
+  <li><span>原生js插件</span>
+    <dl>
+      <dd><a href="html/dialog.html" target="_blank">自定义弹出层</a></dd>
+    </dl>
+  </li>
+  <li><span>jquery扩展插件</span>
+    <dl>
+      <dd><a href="html/clock.html" target="_blank"></a></dd>
+    </dl>
+  </li>
 </ul>
 
 <h3>
