--- a/html/dialog.html
+++ b/html/dialog.html
@@ -54,10 +54,10 @@ window.onload = function(){
 		    opacity : 0.1,
 		    cancelBtn:true,
 		    buttons:[{
-				text :'showe',
+				text :'submit',
 				fn:fncall
 			},{
-				text :'helpe',
+				text :'help',
 				fn:help
 			},{
 				text :'取消'
@@ -71,7 +71,7 @@ window.onload = function(){
 
 
 function fncall () {
-	alert('new fncall');
+	alert('submit');
 }
 
 function help () {
