--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <!-- <link rel="stylesheet" type="text/css" href="css/base.css" media="screen"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
+    <script src="js/move.js"></script>
     <script src="js/js.js"></script>
   </head>
   <body>
@@ -28,35 +29,98 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人简历.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p></p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人作品.</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p></p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人总结.</h3>
 
 <ul id="grzj">
   <li><span>js网页特效</span>
-    <dl>
-      <dd><a href="html/clock.html" target="_blank">简易时钟</a></dd>
-    </dl>
+    <div id="bycbox" class="clear">
+      <ul id="byc">
+        <li>
+          <div>
+            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/clock.html">简易时钟</a></p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/clock.html">简易时钟</a></p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/clock.html">简易时钟</a></p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/clock.html">简易时钟</a></p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/clock.html">简易时钟</a></p>
+          </div>
+        </li>
+      </ul>
+      <ul id="byc2">
+        <li>
+          <div>
+            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/clock.html">简易时钟</a></p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/clock.html">简易时钟</a></p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/clock.html">简易时钟</a></p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/clock.html">简易时钟</a></p>
+          </div>
+        </li>
+        <li>
+          <div>
+            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/clock.html">简易时钟</a></p>
+          </div>
+        </li>
+      </ul>
+    </div>
   </li>
   <li><span>jquery网页特效</span>
     <dl>
-      <dd><a href="html/clock.html" target="_blank"></a></dd>
+      <dd><a href="html/clock.html"></a></dd>
     </dl>
   </li>
   <li><span>原生js插件</span>
     <dl>
-      <dd><a href="html/dialog.html" target="_blank">自定义弹出层</a></dd>
+      <dd><a href="html/dialog.html">自定义弹出层</a></dd>
     </dl>
   </li>
   <li><span>jquery扩展插件</span>
     <dl>
-      <dd><a href="html/clock.html" target="_blank"></a></dd>
+      <dd><a href="html/clock.html"></a></dd>
     </dl>
   </li>
 </ul>
@@ -64,12 +128,23 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>学习资料</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p></p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>面试题</h3>
+
+<ul id="mst">
+  <li><span></span>
+    <dl>
+      <dd><a href="html/clock.html"></a></dd>
+    </dl>
+  </li>
+</ul>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>其它</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+
 
       <footer class="site-footer">
 
