--- a/html/3Dmenu.html
+++ b/html/3Dmenu.html
@@ -7,7 +7,7 @@
 <style>
 	body{background: #000}
 </style>
-<script type="text/javascript" src="../js/zns_3dsc.js"></script>
+<script type="text/javascript" src="../js/3Dmenu.js"></script>
 </head>
 
 <body>
