--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <ul id="byc">
         <li>
           <div>
-            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/3Dmenu.html">3D球菜单</a></p>
             <p><a href="html/clock.html">简易时钟</a></p>
           </div>
         </li>
