--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <ul id="byc2">
         <li>
           <div>
-            <p><a href="html/shoufengqin.html">手风琴幻灯</a></p>
+            <p><a href="html/shoufengqin.html">手风琴幻灯片</a></p>
             <p><a href="html/clock.html">简易时钟</a></p>
           </div>
         </li>
