--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
       <dd><a href="html/clock.html"></a></dd>
     </dl>
   </li>
+  <li><span>游戏开发</span>
+    <dl>
+      <dd><a href="html/pullbox.html">推箱子</a></dd>
+    </dl>
+  </li>
 </ul>
 
 <h3>
