--- a/html/pushbox.html
+++ b/html/pushbox.html
@@ -15,7 +15,7 @@
 .person{ width:50px; height:50px; background:url(images/person.png) no-repeat; position:absolute;}
 
 </style>
-<script type="text/javascript" src="jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="../js/jquery.js"></script>
 <script>
 
 $(function(){
