--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   </li>
   <li><span>游戏开发</span>
     <dl>
-      <dd><a href="html/pullbox.html">推箱子</a></dd>
+      <dd><a href="html/pushbox.html">推箱子</a></dd>
     </dl>
   </li>
 </ul>
