--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li>
           <div>
             <p><a href="html/3Dmenu.html">3D球菜单</a></p>
-            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="cnfolH5/index.html">H5专家入驻</a></p>
           </div>
         </li>
         <li>
