--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </li>
         <li>
           <div>
-            <p><a href="html/clock.html">简易时钟</a></p>
-            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="fadeInOut/fadeInOut.html">淡入淡出画册</a></p>
+            <p><a href="fadeInOut/fadeInOut.html">淡入淡出画册</a></p>
           </div>
         </li>
         <li>
