--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <li>
           <div>
             <p><a href="html/clock.html">简易时钟</a></p>
-            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="downMenu/downMenu.html">简单下拉效果</a></p>
           </div>
         </li>
         <li>
