--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <li>
           <div>
             <p><a href="html/shoufengqin.html">手风琴幻灯片</a></p>
-            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/跑马灯打字机.html">跑马灯打字机</a></p>
           </div>
         </li>
         <li>
