--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </li>
         <li>
           <div>
-            <p><a href="cloud_demo/demo.html">视觉差画册</a></p>
+            <p><a href="html/仿苹果菜单.html">仿苹果菜单</a></p>
             <p><a href="cloud_demo/demo.html">视觉差画册</a></p>
           </div>
         </li>
