--- a/html/仿苹果菜单.html
+++ b/html/仿苹果菜单.html
@@ -49,11 +49,11 @@ window.onload=  function(){
 <input type="text" value="">
 <input type="text" value=""> -->
 <div id="div1">
-	<img src="img/1.png" alt="">
-	<img src="img/2.png" alt="">
-	<img src="img/3.png" alt="">
-	<img src="img/4.png" alt="">
-	<img src="img/5.png" alt="">
+	<img src="../img/1.png" alt="">
+	<img src="../img/2.png" alt="">
+	<img src="../img/3.png" alt="">
+	<img src="../img/4.png" alt="">
+	<img src="../img/5.png" alt="">
 </div>
 </body>
 </html>
