--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </li>
         <li>
           <div>
-            <p><a href="fadeInOut/圆周运动.html">圆周运动</a></p>
+            <p><a href="html/圆周运动.html">圆周运动</a></p>
             <p><a href="fadeInOut/fadeInOut.html">淡入淡出画册</a></p>
           </div>
         </li>
