--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         </li>
         <li>
           <div>
-            <p><a href="html/clock.html">简易时钟</a></p>
-            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/谷歌眼睛.html">谷歌眼睛</a></p>
+            <p><a href="html/三维运动.html">三维运动</a></p>
           </div>
         </li>
       </ul>
