--- a/html/谷歌眼睛.html
+++ b/html/谷歌眼睛.html
@@ -5,7 +5,7 @@
 <title>三维运动</title>
 <style>
 *{margin: 0;padding: 0;}
-#div1{width: 176px;height: 91px; position: absolute;left: 300px; top: 200px; background: url(img/265.png) no-repeat;	
+#div1{width: 176px;height: 91px; position: absolute;left: 300px; top: 200px; background: url(../img/265.png) no-repeat;	
 }
 #div2{border: 2px #000 solid; position: absolute;
 	left: 115px; top: 43px; border-radius: 50%;
