--- a/html/谷歌眼睛.html
+++ b/html/谷歌眼睛.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>三维运动</title>
+<title>谷歌眼睛</title>
 <style>
 *{margin: 0;padding: 0;}
 #div1{width: 176px;height: 91px; position: absolute;left: 300px; top: 200px; background: url(../img/265.png) no-repeat;	
