--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人作品.</h3>
-  <a href="cnfolH5/index.html">H5专家入驻</a>
+  <!-- <a href="cnfolH5/index.html">H5专家入驻</a> -->
   
 <p></p>
 
@@ -48,7 +48,8 @@
         <li>
           <div>
             <p><a href="html/3Dmenu.html">3D球菜单</a></p>
-            <p><a href="cnfolH5/index.html">H5专家入驻</a></p>
+            <p><a href="html/3Dmenu.html">3D球菜单</a></p>
+            <!-- <p><a href="cnfolH5/index.html">H5专家入驻</a></p> -->
           </div>
         </li>
         <li>
