--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <li>
           <div>
             <p><a href="html/clock.html">简易时钟</a></p>
-            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/template.html">简易模版</a></p>
           </div>
         </li>
         <li>
