--- a/html/template.html
+++ b/html/template.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>template</title>
 <script src="http://hs.3g.cnfol.com/uh/Js/PlugJs/jquery.min.js"></script>
-<!-- <script src="http://hs.3g.cnfol.com/uh/Js/PlugJs/template.js"></script> -->
-<script src="template.js"></script>
+<script src="http://hs.3g.cnfol.com/uh/Js/PlugJs/template.js"></script>
+
 </head>
 <body>
 
