--- a/html/template.html
+++ b/html/template.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>template</title>
-<script src="http://hs.3g.cnfol.com/uh/Js/PlugJs/jquery.min.js"></script>
-<script src="http://hs.3g.cnfol.com/uh/Js/PlugJs/template.js"></script>
+<script src="../js/jquery.js"></script>
+<script src="../js/template.js"></script>
 
 </head>
 <body>
