--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </li>
         <li>
           <div>
-            <p><a href="html/clock.html">简易时钟</a></p>
+            <p><a href="html/canvas时钟.html">简易时钟</a></p>
             <p><a href="html/clock.html">简易时钟</a></p>
           </div>
         </li>
