--- a/index.html
+++ b/index.html
@@ -169,5 +169,5 @@
 </body>
 </html>
 <script>
-  document.getElementById('countTotal').innerHTML = "您是第" + visits + "访问本网页的！";
+  document.getElementById('countTotal').innerHTML = "您是第" + visits + "访问本网站的！";
 </script>
