--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </section>
 
-  <p id="countTotal" style="text-align: center;"></p>
+  <!-- <p id="countTotal" style="text-align: center;"></p> -->
 
   <section class="main-content">
     
@@ -87,7 +87,7 @@
           </li>
           <li>
             <div>
-              <p><a href="html/clock.html">简易时钟</a></p>
+              <p><a href="html/video.html">H5自定义播放器</a></p>
               <p><a href="html/template.html">简易模版</a></p>
             </div>
           </li>
@@ -169,5 +169,5 @@
 </body>
 </html>
 <script>
-  document.getElementById('countTotal').innerHTML = "您是第" + visits + "个访问本主页的！";
+  //document.getElementById('countTotal').innerHTML = "您是第" + visits + "个访问本主页的！";
 </script>
