--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li>
             <div>
               <p><a href="html/3Dmenu.html">3D球菜单</a></p>
-              <p><a href="html/3Dmenu.html">3D球菜单</a></p>
+              <p><a href="html/仿支付宝密码输入与回退.html">仿支付宝密码输入与回退</a></p>
               <!-- <p><a href="cnfolH5/index.html">H5专家入驻</a></p> -->
             </div>
           </li>
@@ -94,7 +94,7 @@
           <li>
             <div>
               <p><a href="html/clock.html">简易时钟</a></p>
-              <p><a href="html/clock.html">简易时钟</a></p>
+              <p><a href="http://www.cnblogs.com/vsmart/" target="_blank">个人博客园</a></p>
             </div>
           </li>
           <li>
