--- a/html/仿支付宝密码输入与回退.html
+++ b/html/仿支付宝密码输入与回退.html
@@ -26,9 +26,9 @@
 
 	<tr>
 		<td>交易密码：</td>
-		<td><span class="iptPwds">
-                <input type="password" class=""><input type="password" class=""><input type="password" class=""><input type="password"><input type="password"><input type="password">
-            </span>
+		<td><div class="iptPwds">
+                <input type="password"  maxlength="1" class=""><input maxlength="1" type="password" class=""><input maxlength="1" type="password" class=""><input maxlength="1" type="password"><input maxlength="1" type="password"><input maxlength="1" type="password">
+            </div>
         </td>
 	</tr>
 
