--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <section class="page-header">
     <h1 class="project-name">Vsmartzhl.GitHub.com</h1>
     <h2 class="project-tagline">Welcome to my personal website</h2>
+    <video src="images/让我们荡起双浆.mp3" autoplay loop controls style="display:none;"></video>
     <div class="clock">
       <div class="cap"></div>
       <div class="hou"></div>
@@ -37,7 +38,7 @@
 
   <h3>
   <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人作品.</h3>
-    <!-- <a href="cnfolH5/index.html">H5专家入驻</a> -->
+    <a href="cnfolH5/index.html">H5专家入驻</a>
 
   <h3>
   <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人总结</h3>
