--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <h3>
   <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人作品.</h3>
     <a href="cnfolH5/index.html">H5专家入驻</a>
+    <a href="http://licai.cnfol.com" target="_blank">理财超市</a>
 
   <h3>
   <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人总结</h3>
